combining plots from parts A and B, since they should be identical.

--- a/school/elec_313/lab2/tex/combined.tex
+++ b/school/elec_313/lab2/tex/combined.tex
@@ -1,6 +1,7 @@
 % GNUPLOT: LaTeX picture
 \setlength{\unitlength}{0.240900pt}
 \ifx\plotpoint\undefined\newsavebox{\plotpoint}\fi
+\sbox{\plotpoint}{\rule[-0.200pt]{0.400pt}{0.400pt}}%
 \begin{picture}(1500,900)(0,0)
 \sbox{\plotpoint}{\rule[-0.200pt]{0.400pt}{0.400pt}}%
 \put(151.0,131.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
@@ -67,18 +68,53 @@
 \put(30,453){\makebox(0,0){\shortstack{$I_d$\\(mA)}}}
 \put(795,29){\makebox(0,0){$V_d$ (V)}}
 \put(795,838){\makebox(0,0){Diode Current vs. Voltage}}
-\put(171,756){\usebox{\plotpoint}}
-\put(171.0,756.0){\rule[-0.200pt]{33.726pt}{0.400pt}}
-\put(311,756){\usebox{\plotpoint}}
-\put(171.0,756.0){\rule[-0.200pt]{33.726pt}{0.400pt}}
-\put(1375,731){\makebox(0,0){$+$}}
-\put(1322,431){\makebox(0,0){$+$}}
-\put(1267,283){\makebox(0,0){$+$}}
-\put(1190,191){\makebox(0,0){$+$}}
-\put(1132,161){\makebox(0,0){$+$}}
-\put(1075,146){\makebox(0,0){$+$}}
-\put(999,137){\makebox(0,0){$+$}}
-\put(948,134){\makebox(0,0){$+$}}
+\put(171.0,674.0){\rule[-0.200pt]{0.400pt}{19.754pt}}
+\put(171.0,756.0){\rule[-0.200pt]{62.634pt}{0.400pt}}
+\put(431.0,674.0){\rule[-0.200pt]{0.400pt}{19.754pt}}
+\put(171.0,674.0){\rule[-0.200pt]{62.634pt}{0.400pt}}
+\put(291,736){\makebox(0,0)[r]{Part A}}
+\put(627,131){\makebox(0,0){$+$}}
+\put(587,131){\makebox(0,0){$+$}}
+\put(943,134){\makebox(0,0){$+$}}
+\put(1071,146){\makebox(0,0){$+$}}
+\put(1130,161){\makebox(0,0){$+$}}
+\put(1166,176){\makebox(0,0){$+$}}
+\put(1192,192){\makebox(0,0){$+$}}
+\put(1212,208){\makebox(0,0){$+$}}
+\put(1228,225){\makebox(0,0){$+$}}
+\put(1242,241){\makebox(0,0){$+$}}
+\put(1254,257){\makebox(0,0){$+$}}
+\put(1264,274){\makebox(0,0){$+$}}
+\put(1272,291){\makebox(0,0){$+$}}
+\put(1281,307){\makebox(0,0){$+$}}
+\put(1288,324){\makebox(0,0){$+$}}
+\put(1295,341){\makebox(0,0){$+$}}
+\put(1302,358){\makebox(0,0){$+$}}
+\put(1307,374){\makebox(0,0){$+$}}
+\put(1312,392){\makebox(0,0){$+$}}
+\put(1317,408){\makebox(0,0){$+$}}
+\put(1322,425){\makebox(0,0){$+$}}
+\put(1331,459){\makebox(0,0){$+$}}
+\put(1339,493){\makebox(0,0){$+$}}
+\put(1346,528){\makebox(0,0){$+$}}
+\put(1351,562){\makebox(0,0){$+$}}
+\put(1358,596){\makebox(0,0){$+$}}
+\put(1363,631){\makebox(0,0){$+$}}
+\put(1369,665){\makebox(0,0){$+$}}
+\put(1374,701){\makebox(0,0){$+$}}
+\put(1377,736){\makebox(0,0){$+$}}
+\put(1382,771){\makebox(0,0){$+$}}
+\put(361,736){\makebox(0,0){$+$}}
+\put(291,695){\makebox(0,0)[r]{Part B}}
+\put(1375,731){\makebox(0,0){$\times$}}
+\put(1322,431){\makebox(0,0){$\times$}}
+\put(1267,283){\makebox(0,0){$\times$}}
+\put(1190,191){\makebox(0,0){$\times$}}
+\put(1132,161){\makebox(0,0){$\times$}}
+\put(1075,146){\makebox(0,0){$\times$}}
+\put(999,137){\makebox(0,0){$\times$}}
+\put(948,134){\makebox(0,0){$\times$}}
+\put(361,695){\makebox(0,0){$\times$}}
 \put(151.0,131.0){\rule[-0.200pt]{0.400pt}{155.380pt}}
 \put(151.0,131.0){\rule[-0.200pt]{310.279pt}{0.400pt}}
 \put(1439.0,131.0){\rule[-0.200pt]{0.400pt}{155.380pt}}
