--- a/school/elec_313/lab2/tex/part_a.tex
+++ b/school/elec_313/lab2/tex/part_a.tex
@@ -67,6 +67,10 @@
 \put(30,453){\makebox(0,0){\shortstack{$I_d$\\(mA)}}}
 \put(795,29){\makebox(0,0){$V_d$ (V)}}
 \put(795,838){\makebox(0,0){Diode Current vs. Voltage}}
+\put(171,756){\usebox{\plotpoint}}
+\put(171.0,756.0){\rule[-0.200pt]{33.726pt}{0.400pt}}
+\put(311,756){\usebox{\plotpoint}}
+\put(171.0,756.0){\rule[-0.200pt]{33.726pt}{0.400pt}}
 \put(627,131){\makebox(0,0){$+$}}
 \put(587,131){\makebox(0,0){$+$}}
 \put(943,134){\makebox(0,0){$+$}}
