--- a/school/elec_313/lab2/tex/report.tex
+++ b/school/elec_313/lab2/tex/report.tex
@@ -114,8 +114,7 @@ measure voltage across and current through the diode ($V_d$ and $I_d$,
 respectively) while $V_s$ was swept from \SI{-5}{V} to \SI{+10}{V}.
 The step size from \SI{-5}{V} to \SI{0}{V} and from \SI{5}{V} to
 \SI{10}{V} was \SI{0.5}{V}, and \SI{0.25}{V} from \SI{0}{V} to
-\SI{5}{V}.  These values were recorded in Table~\ref{tab:part_a} and
-used to generate the graph in Figure~\ref{fig:part_a_graph}.
+\SI{5}{V}.  These values were recorded in Table~\ref{tab:part_a} and plotted in Figure~\ref{fig:combined_graph}.
 
 \subsection{Part B}
 \label{sec:proc_b}
@@ -127,8 +126,7 @@ current ($I_d$).  This time $V_s$ was held at \SI{10}{V} and $R$
 varied: \SI{200}{\ohm}, \SI{500}{\ohm}, \SI{1}{\kilo\ohm},
 \SI{2}{\kilo\ohm}, \SI{5}{\kilo\ohm}, \SI{10}{\kilo\ohm},
 \SI{20}{\kilo\ohm}, \SI{50}{\kilo\ohm}, \SI{100}{\kilo\ohm}.  These
-values were recorded in Table~\ref{tab:part_b} and used to generate
-the graph in Figure~\ref{fig:part_b_graph}.
+values were recorded in Table~\ref{tab:part_b} and plotted in Figure~\ref{fig:combined_graph}.
 
 \subsection{Part C}
 \label{sec:proc_c}
@@ -143,8 +141,8 @@ and a multimeter was used to measure the voltage at that node
 \section{Results}
 \label{sec:results}
 
-\subsection{Part A}
-\label{sec:result_a}
+% \subsection{Part A}
+% \label{sec:result_a}
 
 \begin{table}[hbtp]
   \centering
@@ -209,9 +207,15 @@ and a multimeter was used to measure the voltage at that node
 
 \begin{figure}[hbtp]
   \centering
-  \input{part_a}
-  \caption{\label{fig:part_a_graph} Diode characteristics measured in Part A.}
+  \input{combined}
+  \caption{\label{fig:combined_graph} Diode characteristics measured in Parts A and B.}
 \end{figure}
+
+% \begin{figure}[hbtp]
+%   \centering
+%   \input{part_a}
+%   \caption{\label{fig:part_a_graph} Diode characteristics measured in Part A.}
+% \end{figure}
 
 \begin{figure}[hbtp]
   \centering
@@ -219,8 +223,8 @@ and a multimeter was used to measure the voltage at that node
   \caption{\label{fig:part_a_graph2} $\ln{(I_d)}$ vs. $V_d$.}
 \end{figure}
 
-\subsection{Part B}
-\label{sec:result_b}
+% \subsection{Part B}
+% \label{sec:result_b}
 
 \begin{table}[hbtp]
   \centering
@@ -240,14 +244,14 @@ and a multimeter was used to measure the voltage at that node
   \caption{\label{tab:part_b} Diode characteristics measured in Part B.}
 \end{table}
 
-\begin{figure}[hbtp]
-  \centering
-  \input{part_b}
-  \caption{\label{fig:part_b_graph} Diode characteristics measured in Part B.}
-\end{figure}
+% \begin{figure}[hbtp]
+%   \centering
+%   \input{part_b}
+%   \caption{\label{fig:part_b_graph} Diode characteristics measured in Part B.}
+% \end{figure}
 
-\subsection{Part C}
-\label{sec:result_c}
+% \subsection{Part C}
+% \label{sec:result_c}
 
 \begin{table}[hbtp]
   \centering
