--- a/school/elec_313/lab2/tex/report.tex
+++ b/school/elec_313/lab2/tex/report.tex
@@ -65,16 +65,6 @@ voltage ($V_T$) using values measured in the lab.
 \section{Equipment}
 \label{sec:equipment}
 
-%\begin{multicols}{2}
-%  \begin{description}
-%  \item[Diode] \hfill \\ 1N4002
-%  \item[Resistors] \hfill \\ \SI{330}{\ohm}, \SI{470}{\ohm}, \SI{680}{\ohm}
-%  \item[Resistive Decade box] \hfill \\ Heathkit IN--3117
-%  \item[Power supply] \hfill \\ HP E3631A
-%  \item[Multimeter] \hfill \\ Fluke 8010A
-%  \end{description}
-%\end{multicols}
-
 \begin{tabular}{ll}
   \centering
   Diode: 1N4002 & Power supply: HP E3631A \\
@@ -88,12 +78,12 @@ voltage ($V_T$) using values measured in the lab.
 \begin{figure}[hbtp]
   \centering
   \begin{subfigure}[b]{0.4\textwidth}
-    \includegraphics[width=\textwidth]{img/circuit1}
+    \includegraphics[width=\textwidth]{circuit1}
     \caption{\label{fig:circuit1} Circuit used for Parts A and Part B.}
   \end{subfigure}%
   ~
   \begin{subfigure}[b]{0.6\textwidth}
-    \includegraphics[width=\textwidth]{img/circuit2}
+    \includegraphics[width=\textwidth]{circuit2}
     \caption{\label{fig:circuit2} Circuit used for Part C.}
   \end{subfigure}
   \caption{\label{fig:circuits_tested} Circuits used in this lab.}
@@ -142,9 +132,6 @@ and a multimeter was used to measure the voltage at that node
 
 \section{Results}
 \label{sec:results}
-
-% \subsection{Part A}
-% \label{sec:result_a}
 
 \begin{table}[hbtp]
   \centering
@@ -216,56 +203,6 @@ and a multimeter was used to measure the voltage at that node
   \caption{\label{tab:part_a} Diode characteristics measured in Part A.}
 \end{table}
 
-% \begin{table}[hbtp]
-%   \centering
-%   \begin{tabular}{cccc}
-%     $V_s$ (V) & $V_d$ (V) & $I_d$ (mA) \\
-%     \hline
-%     -5.00 & -5.000 & 0.01 \\
-%     -4.50 & -4.500 & 0.01 \\
-%     -4.00 & -4.000 & 0.01 \\
-%     -3.50 & -3.500 & 0.01 \\
-%     -3.00 & -3.000 & 0.01 \\
-%     -2.50 & -2.500 & 0.01 \\
-%     -2.00 & -2.000 & 0.01 \\
-%     -1.50 & -1.500 & 0.01 \\
-%     -1.00 & -1.000 & 0.01 \\
-%     -0.50 & -0.500 & 0.01 \\
-%     0.00 & 0.277 & 0.010 \\
-%     0.25 & 0.254 & 0.010 \\
-%     0.50 & 0.461 & 0.105 \\
-%     0.75 & 0.536 & 0.469 \\
-%     1.00 & 0.570 & 0.922 \\
-%     1.25 & 0.591 & 1.40 \\
-%     1.50 & 0.606 & 1.89 \\
-%     1.75 & 0.618 & 2.39 \\
-%     2.00 & 0.627 & 2.90 \\
-%     2.25 & 0.635 & 3.41 \\
-%     2.50 & 0.642 & 3.92 \\
-%     2.75 & 0.648 & 4.44 \\
-%     3.00 & 0.653 & 4.95 \\
-%     3.25 & 0.658 & 5.47 \\
-%     3.50 & 0.662 & 5.99 \\
-%     3.75 & 0.666 & 6.51 \\
-%     4.00 & 0.670 & 7.03 \\
-%     4.25 & 0.673 & 7.55 \\
-%     4.50 & 0.676 & 8.08 \\
-%     4.75 & 0.679 & 8.60 \\
-%     5.00 & 0.682 & 9.13 \\
-%     5.50 & 0.687 & 10.18 \\
-%     6.00 & 0.692 & 11.23 \\
-%     6.50 & 0.696 & 12.30 \\
-%     7.00 & 0.699 & 13.36 \\
-%     7.50 & 0.703 & 14.42 \\
-%     8.00 & 0.706 & 15.49 \\
-%     8.50 & 0.709 & 16.56 \\
-%     9.00 & 0.712 & 17.66 \\
-%     9.50 & 0.714 & 18.75 \\
-%     10.00 & 0.717 & 19.84 \\
-%   \end{tabular}
-%   \caption{\label{tab:part_a} Diode characteristics measured in Part A.}
-% \end{table}
-
 \begin{figure}[hbtp]
   \centering
   \input{combined}
@@ -283,9 +220,6 @@ and a multimeter was used to measure the voltage at that node
   \input{part_a2}
   \caption{\label{fig:part_a_graph2} $\ln{(I_d)}$ vs. $V_d$.}
 \end{figure}
-
-% \subsection{Part B}
-% \label{sec:result_b}
 
 \begin{table}[hbtp]
   \centering
@@ -310,9 +244,6 @@ and a multimeter was used to measure the voltage at that node
 %   \input{part_b}
 %   \caption{\label{fig:part_b_graph} Diode characteristics measured in Part B.}
 % \end{figure}
-
-% \subsection{Part C}
-% \label{sec:result_c}
 
 \begin{table}[hbtp]
   \centering
