Always forget to close environments.... ) :

--- a/school/elec_313/lab3/tex/rect_vp_vdc.tex
+++ b/school/elec_313/lab3/tex/rect_vp_vdc.tex
@@ -62,7 +62,7 @@
 \put(171.0,131.0){\rule[-0.200pt]{305.461pt}{0.400pt}}
 \put(1439.0,131.0){\rule[-0.200pt]{0.400pt}{155.380pt}}
 \put(171.0,776.0){\rule[-0.200pt]{305.461pt}{0.400pt}}
-\put(30,453){\makebox(0,0){$V_{DC} (V)}}
+\put(30,453){\makebox(0,0){$V_{DC} (V)$}}
 \put(805,29){\makebox(0,0){$V_S (V_{peak})$}}
 \put(805,838){\makebox(0,0){Peak Voltage vs. DC Voltage in Rectifier Circuit}}
 \put(171,200){\usebox{\plotpoint}}
