--- a/school/elec_313/lab3/tex/report.tex
+++ b/school/elec_313/lab3/tex/report.tex
@@ -139,8 +139,8 @@ voltage ($V_T$) using values measured in the lab.
 
 \begin{figure}[btph]
   \centering
-%  \input{combined}
-  \caption{\label{fig:combined_graph} Diode characteristics measured in Parts A and B.}
+  \input{rect_vp_vdc}
+  \caption{\label{fig:rect_vp_vdc} AC input vs. DC output of circuit, where $R_L=\SI{10}{\kilo\ohm}$}
 \end{figure}
 
 \begin{table}[hbtp]
