Adding circuit diagrams

--- a/school/elec_313/lab3/tex/report.tex
+++ b/school/elec_313/lab3/tex/report.tex
@@ -58,10 +58,10 @@
 \section{Objective}
 \label{sec:objective}
 
-The objective is to observe the basic operation of a diode.  In
-addition, the Schockley equation (Eq~\ref{eq:schockley}) is used to
-find the diode's reverse saturation current ($I_S$) and thermal
-voltage ($V_T$) using values measured in the lab.
+% The objective is to observe the basic operation of a diode.  In
+% addition, the Schockley equation (Eq~\ref{eq:schockley}) is used to
+% find the diode's reverse saturation current ($I_S$) and thermal
+% voltage ($V_T$) using values measured in the lab.
 
 \section{Equipment}
 \label{sec:equipment}
@@ -80,14 +80,14 @@ voltage ($V_T$) using values measured in the lab.
 
 \begin{figure}[hbtp]
   \centering
-  \begin{subfigure}[b]{0.4\textwidth}
-%    \includegraphics[width=\textwidth]{circuit1}
-    \caption{\label{fig:circuit1} Circuit used for Parts A and Part B.}
+  \begin{subfigure}[b]{0.6\textwidth}
+    \includegraphics[width=\textwidth]{volt_rect}
+    \caption{\label{fig:volt_rect} Voltage rectifier circuit.}
   \end{subfigure}%
   ~
-  \begin{subfigure}[b]{0.6\textwidth}
-%    \includegraphics[width=\textwidth]{circuit2}
-    \caption{\label{fig:circuit2} Circuit used for Part C.}
+  \begin{subfigure}[b]{0.4\textwidth}
+    \includegraphics[width=\textwidth]{volt_reg}
+    \caption{\label{fig:volt_reg} Voltage regulator circuit..}
   \end{subfigure}
   \caption{\label{fig:circuits_tested} Circuits used in this lab.}
 \end{figure}
