--- a/school/elec_313/lab3/tex/report.tex
+++ b/school/elec_313/lab3/tex/report.tex
@@ -230,17 +230,12 @@
 %
 \begin{equation}
   \label{eq:percent_diff}
-  \%_{diff} = \frac{|nominal - measured|}{nominal}100\%
+  \%_{diff} = \frac{|nominal - measured|}{nominal}\times 100\%
 \end{equation}
 %
 \begin{equation}
-  \label{eq:schockley}
-  I_D = I_S \left(e^{\frac{V_D}{V_T}} - 1\right)
-\end{equation}
-%
-  \begin{equation}
-  \label{eq:m}
-    m = \frac{ln(I_2)-ln(I_1)}{V_2-V_1} = \frac{1}{V_T}
+  \label{eq:volt_reg}
+  \%_{reg} = \frac{V_{load} - V_{no load}}{V_{no load}}\times 100\%
 \end{equation}
 
 \end{document}
