Adding resistor table for part2

--- a/school/elec_313/lab3/tex/report.tex
+++ b/school/elec_313/lab3/tex/report.tex
@@ -166,6 +166,17 @@ The objective is to construct, measure, and observe the behavior of two common d
   \caption{\label{fig:rect_vp_vdc} AC input vs. DC output of rectifier circuit, where $R_L=\SI{10}{\kilo\ohm}$}
 \end{figure}
 
+\begin{table}[hbtp]
+  \centering
+  \begin{tabular}{ccc}
+    Nominal & Measured & Difference \\
+    (\si{\ohm}) & (\si{\ohm}) & \\
+    \hline
+    47 & 46.52 & 1.13\% \\
+  \end{tabular}
+  \caption{\label{tab:res} Percent difference of resistor in voltage regulator circuit.}
+\end{table}
+
 \begin{table}
   \centering
   \begin{tabular}{ccc}
