--- a/school/elec_313/lab3/tex/report.tex
+++ b/school/elec_313/lab3/tex/report.tex
@@ -220,18 +220,18 @@ The objective is to construct, measure, and observe the behavior of two common d
 \section{Conclusion}
 \label{sec:conclusion}
 
-% As seen in Figure~\ref{fig:part_a_graph2}, the graph of the natural
-% log of $I_d$ vs. $V_d$ derived from Part A data
-% (Table~\ref{tab:part_a}) generates a linear plot.  The slope ($m$) of
-% this line was then calculated and used to determine the thermal
-% voltage ($V_T$) (Eq~\ref{eq:m}).  Two corresponding $I_d$ and $V_d$
-% values (shown in Table~\ref{tab:analysis}) along with $V_T$ were
-% plugged into the Schockley equation (Eq~\ref{eq:schockley}) to derive
-% the saturation current ($I_S$), seen in (Table~\ref{tab:analysis}).
-% The value of $V_T$ is very close to the assumed value of
-% \SI{0.026}{V}.  Also the value of $I_S$ seems to be close to what is
-% typically seen in circuits textbooks, thus showing that diode
-% parameters can be calculated with the Schockley equation.
+As seen in Figure 2, as the peak voltage of the rectifier circuit increases (Figure 1 (a)), the rectifier dc voltage increases. Also, as load resistance is increased on the rectifier, it decreases the 
+
+the increase of resistance reduced the amount of current that could be dissipated from the capacitor over the same amount of time 
+
+before it was “charged up” again. Additionally, the
+there would be a smaller time interval for the capacitor to discharge. 
+As shown in Table 5, the VL across the 100 ohms resistor is 5.02 load resistor was removed. This shows that the Zener used in the experiment is not an ideal Zener.
+In the regulator circuit, when VS is below the Zener diode voltage (VZ), VOC is linearly related to VS. When VS is above VZ, VOC 
+
+is almost at a constant value approximately equal to VZ. When VS is “close” to VZ, the relationship to of VOC is not linearly 
+
+related and the simplified calculations we learn in class are less effective at to computing the VOC. 
 
 \section{Equations}
 \label{sec:equations}
