--- a/school/elec_311/unit_1/project_2/tex/report.tex
+++ b/school/elec_311/unit_1/project_2/tex/report.tex
@@ -49,23 +49,14 @@
 \section{Discussion}
 \label{sec:procedure}
 
-The circuit to be constructed was a 2-bit comparator.  A 2-bit
-comparator takes two 2-bit numbers, $P = P_1P_0$ and $Q = Q_1Q_0$, and
-produces an output, $GT=1 \iff P>Q$.  The truth table describing this
-function is shown in Table~\ref{tab:truth}.  This can be displayed
-more concisely as a summation of min-terms: $\sum_m(P_1, P_0, Q_1,
-Q_0) = (4, 8, 9, 12, 13,14)$.
+The circuit to be constructed was a 2-bit comparator.  A 2-bit comparator takes two 2-bit numbers, $P = P_1P_0$ and $Q = Q_1Q_0$, and produces an output, $GT=1 \iff P>Q$.  The truth table describing this function is shown in Table~\ref{tab:truth}.  This can be displayed more concisely as a summation of min-terms: $\sum_m(P_1, P_0, Q_1, Q_0) = (4, 8, 9, 12, 13,14)$.
 
 Using a Karnaugh map (Fig~\ref{fig:k_map}), a minimal form of the
 function was found: $GT = P_0 \overline{Q_1 Q_0} + P_1 P_0
 \overline{Q_0} + P_1 \overline{Q_1}$.  This function was then
 translated into the circuit shown in Fig~\ref{fig:circuit}.
 
-The NAND gate is considered to be a functionally complete set because
-any logic function can be created with only NAND gates.  This is
-demonstrated graphically in Figure~\ref{fig:nand_gates}.  Using these conversions,
-the circuit was again translated into one using only NAND gates
-(Fig~\ref{fig:circuit_nand}), and truth table verified (not shown).
+The NAND gate is considered to be a functionally complete set because any logic function can be created with only NAND gates.  This is demonstrated graphically in Figure~\ref{fig:nand_gates}.  Using these conversions, the circuit was again translated into one using only NAND gates (Fig~\ref{fig:circuit_nand}), and truth table verified (not shown).
 
 \section{Results}
 \label{sec:results}
